--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<div class="stage">
-	<div class= "player1 stance"></div>
-</div>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="design.css"/>
+	</head>
+	<body>
+		<div class="stage">
+			<div class= "p1 stance"></div>
+		</div>
+	</body>
+</html>
