--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" href="design.css"/>
-	</head>
-	<body>
-		<div class="stage">
-			<div class= "p1 stance"></div>
-		</div>
-	</body>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Stick Fight</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+ <link rel="stylesheet" href="design.css">
+
+  
+</head>
+
+<body>
+  <div class="stage">
+  <div class="p1 stance"></div>
+  <!-- <div class="p2 stance"></div> -->
+</div>
+
+
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script  src="fighting.js"></script>
+
+</body>
 </html>
