--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="stage">
   <div class="p1 stance"></div>
-  <!-- <div class="p2 stance"></div> -->
+  <div class="p2 stance2"></div>
 </div>
 
 
