--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   
 </head>
 
-<body>
-  <div class="stage">
+<body style="background-color:MediumSeaGreen;">
+<h1 style="text-align:center;">Forest Fighters</h1>
+
+  <div style="text-align: center; position:absolute;
+bottom:0px;" class="stage">
   <div class="p1 stance"></div>
   <div class="p2 stance2"></div>
 </div>
+<div><h3 style="text-align:center;">Made by Henry Dang and Edan Sneh at Gunn Hacks 4.0</h3></div>
 
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
