--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ bottom:0px;" class="stage">
 </div>
 <div><h3 style="text-align:center;">Made by Henry Dang and Edan Sneh at Gunn Hacks 4.0</h3></div>
 
-
+<div class = "score1"></div>
+<div class = "score2"></div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script  src="fighting.js"></script>
