--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ bottom:0px;" class="stage">
 <div class = "score1"></div><div class = "score2"></div>
 <p>Use WASD to control P1 E = Upercut, R = Punch, F = Low Kick.<br/>
 	Use the arrow keys to control P2 N = Uppercut, M = Punch, ',' = Low Kick.
+	<br/>Choose your attacks wisely, if you or your opponent choose the same </br>attack they will cancel each other out. Uppercuts defeat jumps and<br/> crouching defeats the low kick.
 </p>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
